@@ -1,3 +1,3 @@
 [Slideshow]
 width:798
-height:500
+height:451
